--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,8 @@
   <div class="wrapper">
 
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
+    <br />
+    <span class="site-description">{{ site.description }}</span>
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
