Moving footer icons into the header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,8 +21,12 @@
           {% endif %}
         {% endfor %}
       </div>
+      {% include social.html %}
     </nav>
 
   </div>
 
 </header>
+
+
+      
