--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -64,7 +64,7 @@
                 }
             }
         }
-
+    
     @include media-query($on-palm) {
         position: absolute;
         top: 9px;
@@ -98,6 +98,10 @@
             display: none;
         }
 
+        .social-list {
+            display: none;
+        }
+        
         &:hover .trigger {
             display: block;
             padding-bottom: 5px;
