--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -128,16 +128,16 @@ blockquote {
 pre,
 code {
     font-size: 15px;
-    border: 1px solid $grey-color-light;
     border-radius: 3px;
-    background-color: #eef;
 }
 
 code {
     padding: 1px 5px;
+    word-wrap: break-word;
 }
 
 pre {
+    border: 1px solid $grey-color-light;
     padding: 8px 12px;
     overflow-x: scroll;
 
@@ -145,6 +145,7 @@ pre {
         border: 0;
         padding-right: 0;
         padding-left: 0;
+        word-wrap: normal;
     }
 }
 
