--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -73,6 +73,7 @@
         border: 1px solid $grey-color-light;
         border-radius: 5px;
         text-align: right;
+        padding-left: 0px;
 
         .menu-icon {
             display: block;
