--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -83,6 +83,7 @@
             line-height: 0;
             padding-top: 10px;
             text-align: center;
+            cursor: pointer;
 
             > svg {
                 width: 18px;
@@ -103,7 +104,7 @@
             display: none;
         }
         
-        &:hover .trigger {
+        &:focus .trigger {
             display: block;
             padding-bottom: 5px;
         }
