Revert "Test for hamburger x-browser"
This reverts commit 2b4c3bd0b4da0579e4bf0587e232b464400a20c6.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -103,12 +103,12 @@
             clear: both;
 
             //Hamburger Click CSS
-            transition: visibility 0.5s;
+            transition: width 0.5s, height 0.5s;
             z-index: 1;
             opacity: 0;
             visibility: hidden;
-            //width: 20px;
-            //height: 0px;
+            width: 20px;
+            height: 0px;
         }
 
         &:focus {
@@ -122,8 +122,8 @@
             pointer-events: auto;
             opacity: 1;
             visibility: visible;
-            //width: auto;
-            //height: auto;
+            width: auto;
+            height: auto;
         }
 
         .page-link {
