rect also cannot be self closed

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -11,13 +11,13 @@
 		<span class="icon icon--stackoverflow">
 			<svg viewBox="0 0 16 16">
 				<g>
-					<rect x="4.3" y="8.4" transform="matrix(0.9718 0.2357 -0.2357 0.9718 2.3263 -1.4965)" fill="#BF9452" width="6.2" height="1.2"/>
-					<rect x="5.1" y="6.3" transform="matrix(0.8905 0.455 -0.455 0.8905 4.0422 -2.9827)" fill="#D28B29" width="6.2" height="1.2"/>
-					<rect x="6.5" y="4.2" transform="matrix(0.7531 0.6579 -0.6579 0.7531 5.5754 -5.1308)" fill="#F68A1F" width="6.2" height="1.2"/>
-					<rect x="8.5" y="2.5" transform="matrix(0.5616 0.8274 -0.8274 0.5616 7.6879 -8.2325)" fill="#F47920" width="6.2" height="1.2"/>
-					<rect x="4" y="10.4" transform="matrix(0.9985 5.452314e-02 -5.452314e-02 0.9985 0.6126 -0.3724)" fill="#A68A6E" width="6.2" height="1.2"/>
-					<polygon fill="#818185" points="11.5,14.8 11.5,9.6 12.7,9.6 12.7,16 1.5,16 1.5,9.6 2.7,9.6 2.7,14.8 "/>
-					<rect x="4" y="12.3" fill="#818185" width="6.3" height="1.2"/>
+					<rect x="4.3" y="8.4" transform="matrix(0.9718 0.2357 -0.2357 0.9718 2.3263 -1.4965)" fill="#BF9452" width="6.2" height="1.2"></rect>
+					<rect x="5.1" y="6.3" transform="matrix(0.8905 0.455 -0.455 0.8905 4.0422 -2.9827)" fill="#D28B29" width="6.2" height="1.2"></rect>
+					<rect x="6.5" y="4.2" transform="matrix(0.7531 0.6579 -0.6579 0.7531 5.5754 -5.1308)" fill="#F68A1F" width="6.2" height="1.2"></rect>
+					<rect x="8.5" y="2.5" transform="matrix(0.5616 0.8274 -0.8274 0.5616 7.6879 -8.2325)" fill="#F47920" width="6.2" height="1.2"></rect>
+					<rect x="4" y="10.4" transform="matrix(0.9985 5.452314e-02 -5.452314e-02 0.9985 0.6126 -0.3724)" fill="#A68A6E" width="6.2" height="1.2"></rect>
+					<polygon fill="#818185" points="11.5,14.8 11.5,9.6 12.7,9.6 12.7,16 1.5,16 1.5,9.6 2.7,9.6 2.7,14.8 "></polygon>
+					<rect x="4" y="12.3" fill="#818185" width="6.3" height="1.2"></rect>
 				</g>
 			</svg>
 		</span>
