--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -83,7 +83,6 @@
             line-height: 0;
             padding-top: 10px;
             text-align: center;
-            cursor: pointer;
 
             > svg {
                 width: 18px;
@@ -99,31 +98,13 @@
             display: none;
         }
         
-        .trigger {
+        .site-nav-links {
             clear: both;
-
-            //Hamburger Click CSS
-            transition: width 0.5s, height 0.5s;
-            z-index: 1;
-            opacity: 0;
-            visibility: hidden;
-            width: 20px;
-            height: 0px;
+            display: none;
         }
 
-        &:focus {
-            pointer-events: none;
-        }
-
-        &:focus .trigger {
-            padding-bottom: 5px;
-            
-            //Hamburger Click CSS
-            pointer-events: auto;
-            opacity: 1;
-            visibility: visible;
-            width: auto;
-            height: auto;
+        .site-nav-links-popup {
+            display: block;
         }
 
         .page-link {
