Remove trailing slash from feed URL
/feed/ doesn't work it has to be just /feed

This might have caused some RSS readers to break, but it's probably too late now. The original change was months ago

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -29,7 +29,7 @@
 			</svg>
 		</span>
 	</a>{% endif %}
-	<a href="{{ "/feed/" | prepend: site.baseurl }}">
+	<a href="{{ "/feed" | prepend: site.baseurl }}">
 		<span class="icon icon--feeds">
 			<svg viewBox="0 0 16 16">
 				<circle fill="#F57F25" cx="1.9" cy="14" r="1.8"></circle>
