--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -230,6 +230,9 @@
         .post-meta {
             display: block;
             width: 100px;
+            margin-bottom: $spacing-unit / 2;
+        }
+        > h2 {
             margin-bottom: 0;
         }
     }
