--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,11 +15,9 @@
       </a>
 
       <div id="nav-link-panel" class="site-nav-links">
-        {% for page in site.pages %}
-          {% if page.title %}
+        {% for page in site.pages %} {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
+          {% endif %} {% endfor %}
         {% include social.html %}
       </div>      
     </nav>
