--- a/css/main.scss
+++ b/css/main.scss
@@ -37,5 +37,6 @@ $on-laptop:        800px;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
-        "layout"
+        "layout",
+        "syntax-highlighting"
 ;
