--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -29,7 +29,7 @@ body {
  */
 h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
-ul, ol, dl, figure,
+ul, ol, dl, figure
 %vertical-rhythm {
     margin-bottom: $spacing-unit / 2;
 }
@@ -65,15 +65,6 @@ figcaption {
 ul, ol {
     margin-left: $spacing-unit;
 }
-
-li {
-    > ul,
-    > ol {
-         margin-bottom: 0;
-    }
-}
-
-
 
 /**
  * Headings
@@ -198,4 +189,18 @@ pre {
         height: 16px;
         vertical-align: middle;
     }
+}
+
+/**
+ * Tables
+ */
+td, th {
+    padding: 6px 13px;
+    border: 1px solid #dfe2e5;
+}
+
+table {
+    border-spacing: 0;
+    border-collapse: collapse;
+    margin-bottom: $spacing-unit / 2;
 }
