--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,9 @@
       <div id="nav-link-panel" class="site-nav-links">
         {% for page in site.pages %} {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %} {% endfor %}
+          {% endif %} 
+        {% endfor %}
+        <a class="page-link" href="{{site.baseurl}}/MonsterSplatter">Monster Splatter</a>
         {% include social.html %}
       </div>      
     </nav>
