--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -201,6 +201,10 @@
     margin-left: 0;
     list-style: none;
 
+    h2 {
+        margin-bottom: 0px;
+    }
+
     > li {
         margin-bottom: $spacing-unit;
         border-bottom: 6px double $brand-color-dark;
@@ -230,7 +234,7 @@
         .post-meta {
             display: block;
             width: 100px;
-            margin-bottom: $spacing-unit / 2;
+            margin-bottom: 0;
         }
         > h2 {
             margin-bottom: 0;
@@ -241,6 +245,7 @@
 .post-meta {
     font-size: $small-font-size;
     color: $grey-color;
+    margin-bottom: $spacing-unit / 2;
 }
 
 .post-link {
