--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -46,7 +46,11 @@
 
         // Gaps between nav items, but not on the first one
         &:not(:first-child) {
-            margin-left: 20px;
+            margin-left: 10px;
+        }
+        &:not(:last-child) {
+            padding-right: 10px;
+            border-right: solid 1px black;
         }
     }
     .social-list {
