--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 
       <div id="nav-link-panel" class="site-nav-links">
         <div>
-          <a class="page-link" href="{{site.baseurl}}">Blog</a>
+          <a class="page-link" href="{{site.baseurl}}/">Blog</a>
           {% for page in site.pages %} {% if page.title %}
             <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
             {% endif %} 
