--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,4 +20,13 @@
             if ((host == window.location.host) && (window.location.protocol != "https:"))
                 window.location.protocol = "https";
         </script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145399542-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-145399542-1');
+        </script>
     </head>
