--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -41,9 +41,12 @@ ul, ol, dl, figure
  */
 img {
     max-width: 100%;
-    vertical-align: middle;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding:1px;
+    border:1px solid $text-color;
 }
-
 
 
 /**
