--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -58,7 +58,7 @@
         right: 4px;
         top: 3px;
         a {
-            margin-left: 4px;
+            margin-left: 2px;
             &:hover {
                 svg {
                     -webkit-filter: drop-shadow( 0px 0px 3px #fff);
@@ -193,7 +193,7 @@
 /**
  * Page content
  */
-.page-content {
+.default-content {
     padding: $spacing-unit 0;
 }
 
@@ -277,7 +277,7 @@
     }
 }
 
-.post-content {
+.post-content, .page-content {
     margin-bottom: $spacing-unit;
 
     h2 {
@@ -302,5 +302,15 @@
         @include media-query($on-laptop) {
             font-size: 18px;
         }
+    }
+}
+.page-content {
+    img {
+        border: none;
+        display: inline;
+    }
+
+    a {
+        vertical-align: middle;
     }
 }
