--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,10 @@
     <div class="footer-col-wrapper">
       <p>
         Disclaimer: <br /> 
-        The opinions expressed herein are my own personal opinions and do not represent my employer's view in any way.
+        The opinions expressed herein are my own personal opinions and do not represent my employer's view in any way. <br />
+        These posts are all written by me. No generative AI has been used (unless explicitly stated).
+        This page is only intended for human consumption and is NOT allowed to be used for machine training 
+        including but not limited to LLMs.
       </p>
       © Copyright {{ site.time | date: '%Y' }} - Dave Shaw
     </div>
